# spectral

./: .generate_version.py  .gitignore  LICENSE  README  README.md  optional-requirements.txt  pyproject.toml  requirements.txt  setup.py
dev/nbs/: 3dinterpolation_multi_t.ipynb  SHExpand_spin_weight.ipynb  SHExpand_vec.ipynb  grids.ipynb  test_interpolator_v2.ipynb  wftools_spherepack_spherical_expansion_consistency_test.ipynb  wftools_spherepack_test.ipynb  yslm_test_wftools_spherepack_spherical.ipynb
dev/scripts/: interpolate3d_single_point_multi_t.py  interpolate3d_single_point_multi_t_v2.py  spectral.code-workspace  spectral_interpolant_func_2_1731557952.5501757.dump  spectral_interpolant_func_2_1731558259.0324554.dump  spectral_interpolant_func_2_1731558481.8393855.dump  spectral_interpolant_func_2_1731558900.2952535.dump  spectral_interpolant_func_2_1731558940.7424023.dump  spectral_interpolant_func_2_1731558993.7881465.dump  spectral_interpolant_func_2_1731559032.9381049.dump  spectral_interpolant_func_2_1731559117.9206219.dump  spectral_interpolant_func_2_1731559949.0753872.dump  spectral_interpolant_func_2_1731560016.6539524.dump  spectral_interpolant_func_2_1731560142.7530172.dump  spectral_interpolant_func_2_1731560377.8281877.dump  spectral_interpolant_func_2_1731561535.7106059.dump  spectral_interpolant_func_2_1731561677.7160814.dump  spectral_interpolant_func_2_1731578862.607662.dump  spectral_interpolant_func_2_1731579018.7365613.dump  spectral_interpolant_func_2_1731579306.20301.dump  spectral_interpolant_func_2_1731579422.3918905.dump  spectral_interpolant_func_2_1731579444.063968.dump  spectral_interpolant_func_2_1731579491.8794658.dump  spectral_interpolant_func_2_1731579580.387803.dump  spectral_interpolant_func_2_1731579599.4842916.dump  spectral_interpolant_func_2_1731579835.2591786.dump  spectral_interpolant_func_2_1731579870.9683735.dump  spectral_interpolant_func_2_1731580177.907919.dump  spectral_interpolant_func_2_1731580256.4308503.dump  spectral_interpolant_func_2_1731580825.438967.dump  spectral_interpolant_func_2_1731581925.4400177.dump  spectral_interpolant_func_2_1731582087.6627967.dump  spectral_interpolant_func_2_1731582473.9102137.dump  spectral_interpolant_func_2_1731582537.0222418.dump  spectral_interpolant_func_2_1731582936.4082925.dump  spectral_interpolant_func_2_1731583065.3795068.dump  spectral_interpolant_func_2_1731583160.2685032.dump  (+7 more)
docs/: environment.yml
docs/source/: api.rst  basic_features.rst  (+3 more)
public/: version
spectools/: __init__.py
spectral/: __init__.py
(+41 files in other folders)
