[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable= "W0311"

[tool.flake8]
max-line-length = 120
ignore = ['E203']

[build-system]
#requires = ["setuptools"]
requires = ["hatchling"]
build-backend = "hatchling.build"
#build-backend = "setuptools.build_meta"

[tool.hatch.version]
path = "spectools/__init__.py"


[project]
name = "spectools"
dynamic = ['dependencies', 'optional-dependencies', 'version']
authors = [{ name="Vaishak Prasad", email="vaishakprasad@gmail.com"}, ]
description = " Numerical implementation of various spectral methods "
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
opt = ["optional-requirements.txt"]

[project.urls]
"Homepage" = "https://gitlab.com/vaishakp/spectools"
"Bug Tracker" = "https://gitlab.com/vaishakp/spectools/issues"

[tool.hatch.metadata]
allow-direct-references = true
